--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         </div>
 
         <div class="down_arrow">
-          <i class="fa fa-chevron-down icon_down" aria-hidden="true"></i>
+          <a href="#portfolio" class="slowly"><i class="fa fa-chevron-down icon_down" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
 
-    <div class="portfolio">
+    <div class="portfolio" id="portfolio">
       <div class="container">
         <div class="portfolio_title">
           <h2>Портфолио</h2>
